content aligning fix
Former-commit-id: a8c41b75aac30372596feab99fd2c4ba86b24cb0

--- a/sources/easygenerator.Web/Content/helphint.css
+++ b/sources/easygenerator.Web/Content/helphint.css
@@ -9,7 +9,7 @@
 
 .help-hint-content {
     position: relative;
-    padding: 20px;
+    padding: 20px 20px 20px 0;
     font-size: 13px;
     font-family: 'OpenSans';
 }
